# Prudentia

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.en.md  CHANGELOG.md  Cargo.toml  Makefile  README.en.md  README.md  package.json
backend/: Cargo.toml
backend/src/: ai_ws.rs  config.rs  database.rs  error.rs  json_schema.rs  lib.rs  locale.rs  main.rs  memo_thread.rs  startup.rs  state.rs  time.rs
backend/src/ai/: mock.rs  mod.rs  openai.rs  prompt.rs  runtime.rs
backend/src/ai/cli/: codex.rs  mod.rs  projection.rs  usage.rs
backend/src/ai_ws/: memo_chat.rs
backend/src/conversation/: actions.rs  attachments.rs  company.rs  context.rs  engine.rs  execution_plan.rs  mod.rs  research.rs  storage.rs  subject_resolution.rs  task_routing.rs  types.rs
backend/src/decision/: mod.rs
backend/src/decision_delta/: legs.rs  mod.rs  refresh.rs  routes.rs  storage.rs  types.rs  util.rs
backend/src/investment_system/: mod.rs  rule_graph.rs
backend/src/market_data/: alpha_vantage.rs  longbridge.rs  mock.rs  mod.rs  rate_limit.rs  tencent.rs  yahoo.rs
backend/src/memo/: mod.rs
backend/src/portfolio/: cash_flows.rs  draft_image.rs  draft_processing.rs  import_workflows.rs  mod.rs  performance.rs  performance_returns.rs  performance_window.rs  position_fx.rs  positions.rs  public_symbol_directory.rs  routes.rs  symbol_directory.rs  symbol_resolution.rs  tests.rs  tests_performance.rs  tests_public_symbols.rs  trades.rs  types.rs
backend/src/profile/: mod.rs
backend/src/research/: mod.rs
backend/src/settings/: mod.rs
backend/tests/: framework.rs
docs/: api.md  (+9 more)
(+101 files in other folders)
