[package]
name = "prudentia-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
calamine = "0.26"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
dotenvy = "0.15"
longbridge = "4.3.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time", "process", "sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.12", features = ["v4"] }
zhhz = "0.7.7"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.15"
tower = { version = "0.5", features = ["util"] }
